@@ -17,12 +17,6 @@ configdir: /etc/debomatic/distributions
 # Set this option to the directory where pbuilder hooks are stored
 pbuilderhooks: /usr/share/debomatic/pbuilderhooks
 
-# Set this option to the builds blacklist file
-distblacklist = /etc/debomatic/distribution.blacklist
-
-# Set this option to the file containing list of distributions to always update
-alwaysupdate = /etc/debomatic/alwaysupdate
-
 # Set this option to maximum pbuilders to be run at the same time
 maxbuilds: 3
 
@@ -57,8 +51,19 @@ modules: 1
 # Set this to the directory containing your debomatic modules
 modulespath: /usr/share/debomatic/modules
 
-# Set this to the blacklist file
-blacklist: /etc/debomatic/modules.blacklist
+
+# Runtime section
+[runtime]
+
+# Set this option to the space separated list of blacklisted distributions
+distblacklist = 
+
+# Set this option to the space separated list of distributions to always update
+alwaysupdate = unstable experimental precise
+
+# Set this option to the space separated list of blacklisted modules
+modulesblacklist: Lintian Mailer
+
 
 [mailer]
 
