@@ -1,2 +1,0 @@
-Lintian
-Mailer
